--- a/dashboard/src/App.css
+++ b/dashboard/src/App.css
@@ -1,6 +1,54 @@
-.container {
+.box {
     width: 100vw;
     height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.title {
+    color: white;
+    font-weight: 500;
+    text-align: center;
+    font-size: 3.5rem;
+    text-shadow:3px 3px 0px rgba(0, 0, 0, 0.2);
+}
+
+.time {
+    color: white;
+    text-align: center;
+    font-weight: 300;
+    font-size: 2.5rem;
+    text-shadow:3px 3px 0px rgba(0, 0, 0, 0.2);
+
+}
+
+.date {
+    color: white;
+    text-align: center;
+    font-weight: 300;
+    font-size: 2.5rem;
+    text-shadow:3px 3px 0px rgba(0, 0, 0, 0.2);
+}
+
+.qbox {
+    padding-top:10vh;
+}
+.qtitle {
+    color: white;
+    font-weight: 500;
+    text-align: center;
+    font-size: 2rem;
+    text-shadow:1.5px 1.5px 0px rgba(0, 0, 0, 0.2);
+}
+.quote {
+    color: white;
+    text-align: center;
+    font-weight: 300;
+    font-size: 1.5rem;
+    text-shadow:1.5px 1.5px 0px rgba(0, 0, 0, 0.2);
+}
+
+.content {
+    padding-top:20vh;
+    
 }
